@@ -1,4 +1,4 @@
-.\"	$NetBSD: make.1,v 1.171 2010/04/22 19:15:23 sjg Exp $
+.\"	$NetBSD: make.1,v 1.172 2010/05/13 18:10:16 joerg Exp $
 .\"
 .\" Copyright (c) 1990, 1993
 .\"	The Regents of the University of California.  All rights reserved.
@@ -660,7 +660,7 @@ from which generated dependencies are read.
 The list of variables exported by
 .Nm .
 .It Va .MAKE.JOBS
-The argument to the 
+The argument to the
 .Fl j
 option.
 .It Va .MAKE.JOB.PREFIX
@@ -902,7 +902,7 @@ The standard shell wildcard characters
 .Pf ( Ql * ,
 .Ql \&? ,
 and
-.Ql Op )
+.Ql Oo Oc )
 may
 be used.
 The wildcard characters may be escaped with a backslash
